# apps/api/internal/http/router/router.go
@@ -28,6 +28,7 @@ func New(deps Dependencies) http.Handler {
 		r.Post("/github/repositories/import", deps.V1Handler.ImportGitHubRepositories)
 		r.Get("/jobs/{jobId}", deps.V1Handler.GetJob)
 		r.Get("/organizations/{orgId}/repositories", deps.V1Handler.ListOrganizationRepositories)
+		r.Get("/repositories", deps.V1Handler.ListRepositories)
 		r.Get("/repositories/{repoId}", deps.V1Handler.GetRepository)
 		r.Post("/repositories/{repoId}/sync", deps.V1Handler.TriggerRepositorySync)
 	})
